style: improvements on style of book and shelf components

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,2 +1,4 @@
-<p>{{ title }}</p>
-<p>{{ author }}</p>
+<div class="book-wrapper">
+  <h5 class="book-title">{{ title }}</h5>
+  <h6 class="book-author">{{ author }}</h6>
+</div>
