--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,4 +1,21 @@
-<div class="book-wrapper">
-  <h5 class="book-title">{{ title }}</h5>
-  <h6 class="book-author">{{ author }}</h6>
+<div
+  class="book-main"
+  (click)="onClick()"
+  [@selectedUnselected]="props.selected ? 'selected' : 'unselected'"
+  (@selectedUnselected.done)="onAnimationEvent($event)"
+>
+  <ng-template [ngIf]="animationsState === 'unselected'" [ngIfElse]="selected">
+    <div class="book-wrapper-unselected">
+      <h5 class="book-title">{{ title }}</h5>
+      <h6 class="book-author">{{ author }}</h6>
+    </div>
+  </ng-template>
+  <ng-template #selected>
+    <div class="book-wrapper">
+      <h5 class="book-title">{{ title }}</h5>
+      <h6 class="book-author">{{ author }}</h6>
+      <h6>Pages: {{ pages }}</h6>
+      <h6>Written: {{ written }}</h6>
+    </div>
+  </ng-template>
 </div>
