--- a/src/app/shelf/shelf.component.html
+++ b/src/app/shelf/shelf.component.html
@@ -1,4 +1,5 @@
 <app-book
   *ngFor="let bookData of books"
-  [props]="{ bookData: bookData, selected: false }"
+  [props]="{ bookData: bookData, selected: isSelected(bookData.id) }"
+  (select)="onSelect($event)"
 ></app-book>
