--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -1,13 +1,9 @@
 :host {
-  width: 70px;
-  height: 250px;
-  float: left;
-  margin-right: 0.3em;
+  z-index: 1;
 }
 
 :host(.selected) {
-  width: 200px;
-  height: 250px;
+  z-index: 10;
 }
 
 .book-main {
@@ -19,10 +15,6 @@
   cursor: pointer;
   border-radius: 0 5px 5px 0;
   color: gold;
-}
-
-:host(.details) {
-  width: 250px;
 }
 
 .book-wrapper-unselected {
