feat: work on form component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,4 @@
   <app-shelf *ngFor="let shelfBooks of data" [books]="shelfBooks"></app-shelf>
 </ng-template>
 <div></div>
+<app-form [props]="{ book: firstBook }"> </app-form>
