--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -14,8 +14,8 @@
     <div class="book-wrapper">
       <h5 class="book-title">{{ title }}</h5>
       <h6 class="book-author">{{ author }}</h6>
-      <h6>Pages: {{ pages }}</h6>
-      <h6>Written: {{ written }}</h6>
+      <h6>Количетсво страниц: {{ pages }}</h6>
+      <h6>Написано: {{ written }}</h6>
     </div>
   </ng-template>
 </div>
