--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,9 @@
   display: grid;
   grid-template-columns: 70% 30%;
 }
+
+.app-shelfs {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 1em;
+}
