--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -10,11 +10,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(2, 14, 2);
+  background-color: rgb(2, 8, 2);
   box-shadow: 1px 10px 30px black;
   cursor: pointer;
   border-radius: 0 5px 5px 0;
   color: gold;
+  border-top: 4px solid rgb(253, 253, 253);
 }
 
 .book-wrapper-unselected {
