feat: work on book and form components

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -2,9 +2,9 @@
   class="book-main"
   (click)="onClick()"
   [@selectedUnselected]="props.selected ? 'selected' : 'unselected'"
-  (@selectedUnselected.done)="onAnimationEvent($event)"
+  (@selectedUnselected.done)="onAnimationEnd($event)"
 >
-  <ng-template [ngIf]="animationsState === 'unselected'" [ngIfElse]="selected">
+  <ng-template [ngIf]="unselected" [ngIfElse]="selected">
     <div class="book-wrapper-unselected">
       <h5 class="book-title">{{ title }}</h5>
       <h6 class="book-author">{{ author }}</h6>
