feat: work on book and form components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,4 @@
     ></app-shelf>
   </div>
 </ng-template>
-<app-form [props]="{ book: selectedBook }"> </app-form>
+<app-form [props]="{ book: selectedBook, authors: authors }"> </app-form>
