--- a/src/app/shelf/shelf.component.html
+++ b/src/app/shelf/shelf.component.html
@@ -1,5 +1,7 @@
-<app-book
-  *ngFor="let bookData of props.books"
-  [props]="{ bookData: bookData, selected: isSelected(bookData.id) }"
-  (select)="onSelect($event)"
-></app-book>
+<div class="shelf-books">
+  <app-book
+    *ngFor="let bookData of props.books"
+    [props]="{ bookData: bookData, selected: isSelected(bookData.id) }"
+    (select)="onSelect($event)"
+  ></app-book>
+</div>
