--- a/src/app/shelf/shelf.component.css
+++ b/src/app/shelf/shelf.component.css
@@ -1,7 +1,17 @@
 :host {
   width: 100%;
   height: 100%;
+}
+
+.shelf-books {
+  width: 507px;
+  padding: 5px;
   display: grid;
   grid-template-columns: repeat(6, 80px);
   grid-gap: 5px;
+  background-color: red;
+  background-image: url("../../assets/shelf.jpg");
+  border: 20px solid black;
+  border-image: url("../../assets/shelf-outer.jpg") 20 round round;
+  box-shadow: inset 3px 3px 10px rgb(88, 44, 2);
 }
