refactor: refactor of app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <div class="app-shelfs">
     <app-shelf
       [props]="{
-        books: data,
+        books: books,
         selectedBookId: selectedBook ? selectedBook.id : ''
       }"
       (bookSelected)="onBookSelected($event)"
