--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -1,5 +1,6 @@
 :host {
   z-index: 1;
+  height: 270px;
 }
 
 :host(.selected) {
@@ -18,6 +19,7 @@
   border-top: 7px solid rgb(253, 253, 253);
 
   background-image: url("../../assets/book-default.jpg");
+  height: 260px !important;
 }
 
 .book-wrapper-unselected {
