--- a/src/app/shelf/shelf.component.css
+++ b/src/app/shelf/shelf.component.css
@@ -8,6 +8,7 @@
   padding: 5px;
   display: grid;
   grid-template-columns: repeat(7, 80px);
+  grid-template-rows: fit-content(270px);
   grid-gap: 5px;
   background-image: url("../../assets/shelf-background.jpg");
   background-size: auto;
