--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -7,6 +7,31 @@
   z-index: 10;
 }
 
+@keyframes captionAppereance {
+  0% {
+    opacity: 0;
+    font-size: .8em;
+    left: 0px;
+  }
+  50% {
+    opacity: 0;
+    transform: rotate(1deg);
+  }
+  100% {
+    opacity: 1;
+    font-size: 1em;
+  }
+}
+
+@keyframes captionDisapreance {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .book-main {
   display: flex;
   align-items: center;
@@ -44,4 +69,5 @@
 .book-wrapper {
   display: grid;
   grid-template-rows: 30% 30% 20% 10%;
+  animation: 1s ease-out 0s 1 captionAppereance;
 }
