feat: work on form and app components add refactor types

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,25 @@
 :host {
   display: grid;
-  grid-template-columns: 70% 30%;
+  grid-template-columns: 650px auto;
   height: 100vh;
   width: 100vw;
+  padding: 1%;
 }
 
 .app-shelfs {
   display: grid;
   grid-gap: 1em;
+}
+
+.app-forms {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-rows: 80% 10%;
+  padding: 0 10% 0 5%;
+}
+
+@media only screen and (max-width: 800px) {
+  :host {
+    grid-template-columns: 400px auto;
+  }
 }
