--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,8 +1,7 @@
 <div
   class="book-main"
   (click)="onClick()"
-  [@selectedUnselected]="props.selected ? 'selected' : 'unselected'"
-  (@selectedUnselected.done)="onAnimationEnd($event)"
+  [@selectedUnselectedMain]="props.selected ? 'selected' : 'unselected'"
 >
   <ng-template [ngIf]="!props.selected" [ngIfElse]="selected">
     <div class="book-wrapper-unselected">
