--- a/src/app/sort/sort.component.css
+++ b/src/app/sort/sort.component.css
@@ -2,16 +2,17 @@
   display: grid;
   grid-template-rows: 1fr 1fr;
   box-shadow: 1px 1px 10px black;
+  height: 4em;
 }
 
-:host > button, :host > select {
+:host > button,
+:host > select {
   text-transform: capitalize;
   font-weight: bold;
   border: none;
   cursor: pointer;
-  background-color: #301E15;
+  background-color: #301e15;
   color: white;
-
 }
 
 :host > button {
